<resources>
    <string name="app_name">ProjectSprint1</string>

    //Texts MainActivity
    <string name="text_btn_init">HOME</string>

    //Texts MainActivity2
    <string name="text_title_home">HOME</string>
    <string name="text_btn_product1_home">INFO</string>
    <string name="text_btn_product2_home">INFO</string>
    <string name="text_btn_product3_home">INFO</string>
    <string name="text_product1_home">Agata</string>
    <string name="text_product2_home">Diamante</string>
    <string name="text_product3_home">Cuarzo</string>

</resources>